# Webapp-rs-tutorial

./: Cargo.toml  app.rs  rust-toolchain.toml
back/: Cargo.toml
front/: .gitignore  Cargo.toml  Trunk.toml
front/src/: main.rs
my-app/: Cargo.toml
src/: main.rs
src/front/: Trunk.toml
src/front/src/: main.rs
src/web/src/: app.rs
src/web_front/src/: app.rs
tauri/: Cargo.toml  styles.css
tauri/src/: Cargo.toml  app.rs  main.rs  style.rs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
