[package]
name = "my-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
# "1"でも無理
sea-orm = { version = "1.1.6", features = ["runtime-tokio-rustls", "postgres"] }
yew = "0.21"
wasm-logger = "0.2"
log = "0.4.26"
