[package]
name = "front"
version = "0.1.0"
edition = "2024"

[dependencies]
# "1"でも無理 -> features の postgres を消して無事にビルド
# -> SeaORM では let db = "サーバURL"と書く仕様になった
# sea-orm = { version = "1.1.6", features = ["runtime-tokio-rustls"] }
yew = { version = "0.21", features = ["csr"] }
wasm-logger = "0.2"
log = "0.4.26"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
