[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "src-tauri"
path = "main.rs"

[dependencies]
# 必要な依存関係を追加
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
stylist = { version = "0.13.0", features = ["yew_integration"] }
